--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
+        <link rel="shortcut icon" type="image/x-icon" href="images/icon.ico" />
+
         <title>Robin's Retirement Countdown</title>
 
     </head>
